Add more marketing from Dustorf

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -180,7 +180,13 @@ In addition, multiple blog posts were released to support the Politeia launch, i
 
 Decred was a platinum sponsor at the Texas Bitcoin Conference in Austin on Oct 27-28. A strong mix of presenters converged to deliver some dynamic presentations on governance, Politeia specifically, staking, mining, and many other topics. Videos of the presentations can be viewed [here](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx).
 
-Much of the remainder of the month focused on vetting PR firms and facilitating proposals on Politeia, which will soon be detailed further in a blog by @Dustorf. Now that a PR firm has been approved (early Nov), work will begin to gain consensus within the community on messaging, and plans will begin on significant website updates and an integrated communications plan for 2019. Much more to share in November.
+Much of the remainder of the month focused on vetting PR firms and facilitating proposals on Politeia.
+
+> The right PR firm will help achieve our communications goals and protect our Treasury. The firms have the experience, discipline, and domain expertise to get us in the right places. Many people have commented positively about events. These typically cost $50-$100k per large scale event. Given the level of investment, it makes sense to be certain that we’re in the right places and then optimizing our presence through media outreach to schedule interviews for Decred community members on the right topics with the right media outlets.  
+> There have been concerns about ceding control-messaging or content creation. That will not be the case. Both firms have agreed to work with us as team members in the writers room, and at the end of the day, the Decred community is the client with the final say. There will be a weekly conference call, and I think that all community members should have access to the call.  
+> On that note, I’ll explain the process to this point because I think it’s demonstrative of what it will look like if a firm is selected to proceed. I suggested to @jy-p that the right PR resource would be of value for the aforementioned reasons. I researched and reviewed dozens of firms-crypto specific firms, fin-tech B2B firms, and bulge bracket firms. Quickly, I concluded that only crypto specific firms would possess the technical knowledge to help us in fewer than six months. Next, I interviewed six crypto PR firms and reduced the set to two. I coordinated multiple conference calls with no fewer than eight core community members to vet and question the firms. Collectively, we all agreed that these two firms would be capable of accomplishing our objectives, and we decided to have both of them submit proposals in Politeia so the community could decide. (@Dustorf in [#proposals](https://riot.im/app/#/room/!MIGqWXfLFBwhipPKYL:decred.org/$154023798936000RPDxl:decred.org))
+
+The work to vet the PR firms will soon be detailed further in a blog by @Dustorf. Now that a PR firm has been approved (early Nov), work will begin to gain consensus within the community on messaging, and plans will begin on significant website updates and an integrated communications plan for 2019. Much more to share in November.
 
 @zubairzia0 has taken on the LinkedIn page:
 
