--- a/journal/201810.md
+++ b/journal/201810.md
@@ -121,7 +121,7 @@ The monthly format of the Decred Journal is not well suited for timely updates a
 
 ## Network
 
-Hashrate: nearly doubled in October, starting the month around 80 and ending around 156 PH/s. The low was 73 and the high was 193 PH/s. BeePool's share varied between 20-50%, F2Pool 25-35%, Luxor 3-5% and Coinmine 3-4%. Unkown hashrate held between 20-30% with several spikes to 60%. Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: nearly doubled in October, starting the month around 80 and ending around 156 PH/s. The low was 73 and the high was 193 PH/s. BeePool's share varied between 20-50%, F2Pool 25-35%, Luxor 3-5% and Coinmine 3-4%. Unknown hashrate held between 20-30% with several spikes to 60%. Pool distribution numbers are approximate and cannot be accurately determined.
 
 Staking: 30-day average ticket price was 99.8 DCR (+1.8). The price varied between 96.5 and 102.6 DCR. Locked amount was 3.94-4.06 million DCR, which corresponded to 46.0-46.6% of the available supply.
 
