--- a/journal/201810.md
+++ b/journal/201810.md
@@ -1,6 +1,6 @@
 # {DRAFT} Decred Journal – October 2018
 
-![{alt text}](../img/{file.jpg} "{hover text}")
+![Politeia mainnet release](../img/politeia-300.jpg "Politeia mainnet release")
 
 The big news of the month is the Politeia mainnet launch on October 16th, when decision-making power over the future direction of the project and Treasury funds was handed over to the stakeholder community. Congratulations to everyone and thanks to the Politeia team for the countless hours of work.
 
