--- a/journal/201810.md
+++ b/journal/201810.md
@@ -345,4 +345,4 @@ Most information from third parties is relayed directly from source after a mini
 
 Your feedback and contributions are welcome on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): bee, davecgh, degeri, Haon, jholdstock, oregonisaac, raedah, richardred and zubairzia0. Special thanks to DZ and kozel for translations.
+Credits (alphabetical order): bee, davecgh, degeri, Dustorf, Haon, jholdstock, oregonisaac, raedah, richardred and zubairzia0. Special thanks to DZ for translations.
