--- a/journal/201810.md
+++ b/journal/201810.md
@@ -76,7 +76,7 @@ The proposal describes a formal process for clearing new contractors to bill for
 
 Status: Author has not yet authorized the start of voting.
 
-4\. [Testing of the funding-request mechanism by a non expert](https://proposals.decred.org/proposals/3575a65bbc3616c939acf6edf801e1168485dc864efef910034268f695351b5d) submitted by hashfunction8 on Oct 20
+4\. [Testing of the funding-request mechanism by a non expert](https://proposals.decred.org/proposals/3575a65bbc3616c939acf6edf801e1168485dc864efef910034268f695351b5d) submitted by hashfunction8 on Oct 20.
 
 Author is asking for 0.1 DCR to reimburse their proposal fee, in exchange they would document how to use the proposal submission form.
 
@@ -183,7 +183,7 @@ The work to vet the PR firms will soon be detailed further in a blog by @Dustorf
 
 @zubairzia0 has taken on the LinkedIn page:
 
-> the Decred page was there for a while but it was low in activity. I am currently helping on LinkedIn to increase presence on that platform as there is potential to attract professionals and firms that can become productive stakeholders. The Politeia page is a showcase page (like an extension page for spotlighting a part of the business), that started this Oct. Updates are vetted through a small group of contributors much like Twitter updates. I have made a [GitHub repository](https://github.com/zubairzia0/Decred-research/tree/master/Linkedin) where we can collaborate on plans and activities, and I intend to store the analytics data there as LinkedIn limits export to the last 6 months. LinkedIn Learning is also on the radar where Decred courses can be offered (currently has Etheruem and Bitcoin courses). However, this requires that I or any interested individual apply to get on the LinkedIn Learning platform first. Recent stats for Decred page are 593 page views (+90%) and 276 unique visitors (+51%), and for Politeia page 78 page views and 16 unique visitors.
+> The Decred page was there for a while but it was low in activity. I am currently helping on LinkedIn to increase presence on that platform as there is potential to attract professionals and firms that can become productive stakeholders. The Politeia page is a showcase page (like an extension page for spotlighting a part of the business), that started this Oct. Updates are vetted through a small group of contributors much like Twitter updates. I have made a [GitHub repository](https://github.com/zubairzia0/Decred-research/tree/master/Linkedin) where we can collaborate on plans and activities, and I intend to store the analytics data there as LinkedIn limits export to the last 6 months. LinkedIn Learning is also on the radar where Decred courses can be offered (currently has Etheruem and Bitcoin courses). However, this requires that I or any interested individual apply to get on the LinkedIn Learning platform first. Recent stats for Decred page are 593 page views (+90%) and 276 unique visitors (+51%), and for Politeia page 78 page views and 16 unique visitors.
 
 Targeted advertising report for October was posted by @timhebel. Politeia campaign is planned soon using some of the new graphics. Read more [here](https://www.reddit.com/r/decred/comments/9vb5tk/october_2018_targeted_ads_reports/).
 
@@ -193,11 +193,11 @@ Attended:
 
 * [Austin Startup Week](http://atxstartupweek.com/) in Austin, USA. @moo31337 attended [panel](https://austinstartupweek2018.sched.com/event/GADX/blockchain-track-three-public-blockchains-not-called-bitcoin-or-ethereum) "Three Public Blockchains Not Called Bitcoin. Or Ethereum.". (photos: [1](https://twitter.com/DeCredBAB/status/1046851603570073603) [2](https://twitter.com/DeCredBAB/status/1046844519004737538) [3](https://twitter.com/nemofficial/status/1046914906233036800))
 * @moo31337 taught a class at [University of Texas](https://twitter.com/UTAustin) in Austin, USA. @BAB [notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154162470811524GzRLd:decred.org): "the lecture went really well. The class was on Blockchain, @moo31337 has been asked back to teach another class for spring and has been asked to do an additional class for the economics department at UT. UT Austin is trying to gear up it's classes in blockchain and crypto (...) @moo31337 wrote a toy blockchain the night before to show how easy it is!". @jz [argues](https://twitter.com/jz_bz/status/1046927198018506752) we might have missed a 9 figure ICO for it. ([photo](https://twitter.com/DeCredBAB/status/1046916869024862208))
-* [Decred Meetup](https://www.meetup.com/decredpdx/events/254891749/) in Portland, USA.
+* [Decred Meetup](https://www.meetup.com/decredpdx/events/254891749/) in Portland, USA. Organized by @Eli-RG of Raedah Group.
 * [Bitcoin Meetup CDMX](https://www.meetup.com/Bitcoin-Meetup-Ciudad-de-Mexico/events/255035235/) in Mexico City, Mexico. @elian hosted the event and [noted](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$153893940023124lDnUR:decred.org): "of an audience of 30 people only 4 have heard before of Decred, everyone was so surprised to find such a high-quality project in crypto, also they where very interested in how Politeia will be use to deploy the R&D funds of Decred, about the hybrid consensus mechanism and how governance is structured in Decred, was definitely a great audience, looking forward to another meetup". ([photos](https://twitter.com/Decred_MX/status/1048802991325761536))
 * [SF Blockchain Week](https://sfblockchainweek.io/) in San Francisco, USA. @lukebp was speaking on "Consensus Systems: DPos vs PoS".
 * [Get FinTech](https://www.meetup.com/FinTech-and-digital-assets/events/248585942/) in Mexico City, Mexico. @elian [reports](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154163560411642sPiHv:decred.org): "As a resume from both meetups, the Mexican crypto community that attended (60+) the meetups was surprised and happy to know more about Decred (only 10% knew it from before). The cypherpunk ethos of the project, its decentralized and open source nature, the people behind it, its hybrid consensus and how it all started with an airdrop were among the topics people asked about. Also, many were intrigued by the possibilities that Politeia, the DCR fund and its governance mechanism could mean for the future of digital currencies and digital 'states' in an era when trust is being shifted from centralized institutions to community driven projects.". ([photos](https://twitter.com/Decred_MX/status/1055668881237467136), [video](https://twitter.com/Decred_MX/status/1055669327771373568))
-* [Decred Meetup](https://www.facebook.com/events/241045786567334/) in Casablanca, Morocco. @butterfly noted after hosting the event: "It went well, people were very interested. Some of them knew Decred as a cryptocurrency but they didn't know the technology behind it. Through this meetup they learned more about Decred project and got interested in the technology." ([photos](https://twitter.com/in_insaf/status/1056252398476423168), [photos](https://www.facebook.com/permalink.php?story_fbid=1884165438286394&id=1836611206375151))
+* [Decred Meetup](https://www.facebook.com/events/241045786567334/) in Casablanca, Morocco. @butterfly [noted](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15406469891646FEBXM:decred.org) after hosting the event: "It went well, people were very interested. Some of them knew Decred as a cryptocurrency but they didn't know the technology behind it. Through this meetup they learned more about Decred project and got interested in the technology." ([photos](https://twitter.com/in_insaf/status/1056252398476423168), [photos](https://www.facebook.com/permalink.php?story_fbid=1884165438286394&id=1836611206375151))
 * Decred Summit at [Texas Bitcoin Conference](https://texasbitcoinconference.com/) in Austin, USA. This was a huge Decred event and Decred was a platinum sponsor. A total of 9 presentations were given, varied in subject and all high quality, most of them recorded. The hackathon was canceled due to organization issues, although there were multiple teams interested in working on the issue. New shiny silver jacket made an appearance. ([Decred videos](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx), [all videos](https://www.youtube.com/playlist?list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_), photos: [1](https://twitter.com/ahcastor/status/1056200576206360576), [2](https://twitter.com/odyssey_crypto/status/1056184765181816832), [3](https://twitter.com/cburniske/status/1056228711542988801))
 
 Upcoming:
@@ -206,6 +206,7 @@ Upcoming:
 * [PDX Blockchain Summit & Hackathon](https://pdxblockchainsummit.org) in Portland, USA on Nov 11. Raedah Group will present on Decred and Decentralized Governance.
 * [Blockmaster](https://www.blockmaster.com.br/eventos/forum-blockmaster-2018-sao-paulo/) in Sao Palo, Brazil on Nov 13. @Rhama will talk about Decred and Politeia.
 * [BlockchainFiesta](http://blockchainfiesta.io/) in Krakow, Poland on Nov 16.
+* An event in Australia on Nov 20. Co-organized with [Apollo Capital](https://www.apollocap.io/), who will present their investment analysis on Decred covering the business and technology components that makes Decred attractive to them as investors. Exact location to be clarified. Reach @esizedave in [#event_planning](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org) for details.
 
 ## Media
 
@@ -232,7 +233,7 @@ Articles:
 * Decred ([coinbio.com](https://coinbio.com/decred-dcr/))
 * Decred Hands Over Treasury to Investors ([cryptodigest.com](https://www.cryptodigest.com/dcr/decred-hands-over-treasury-to-investors/))
 * What are the latest news from Decred? (Portuguese, [livecoins.com.br](https://livecoins.com.br/quais-as-ultimas-novidades-da-decred-confira-aqui/))
-* Decred $20 Million Crypto Treasury Turns to Self-Governance With Launch of Politeia ([https://bitcoinexchangeguide.com](https://bitcoinexchangeguide.com/decred-dcr-20-million-crypto-treasury-turns-to-self-governance-with-launch-of-politeia/))
+* Decred $20 Million Crypto Treasury Turns to Self-Governance With Launch of Politeia ([bitcoinexchangeguide.com](https://bitcoinexchangeguide.com/decred-dcr-20-million-crypto-treasury-turns-to-self-governance-with-launch-of-politeia/))
 * Decred Launches Politeia Voting System ([cryptovest.com](https://cryptovest.com/news/decred-dcr-launches-politeia-voting-system/))
 * What is the Antminer DR3? ([bitcoinkit.com](https://www.bitcoinkit.com/guides/antminer-dr3-specs-2018))
 * Daily Cryptocurrency News – 17th October 2018 ([zerocrypted.com](https://zerocrypted.com/daily-cryptocurrency-news-17th-october-2018/))
@@ -295,7 +296,7 @@ Twitter: how Decred and Dash differ merely in [implementation details](https://t
 
 Reddit: whether Decred will [fork](https://www.reddit.com/r/decred/comments/9kmdn2/will_decred_be_hard_fork_like_sia/) like Sia; [concerns](https://www.reddit.com/r/decred/comments/9kqxlp/few_concerns/) about end of emission and stakeholders making good long term decisions; plans on advanced [multisig](https://www.reddit.com/r/decred/comments/9niddh/does_decred_have_plans_for_supporting_advanced/), Schnorr and MuSig; [privacy](https://www.reddit.com/r/decred/comments/9qgqlm/is_it_possible_to_have_a_private_coin_whos/) vs auditable supply; Wachsman and Ditto proposal [discussion](https://www.reddit.com/r/decred/comments/9rpze2/wachsman_or_ditto_which_proposal_will_you_vote_for/); collecting [questions](https://www.reddit.com/r/decred/comments/9sz2ae/ask_the_infrastructure_guy_community_question/) to ask of people running the infrastructure.
 
-Chats: [choosing](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153842845217959NFCXu:decred.org) a VSP; creating and signing transactions [offline](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153842975517974wduOy:decred.org); [differences](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153844796918108yZpuM:decred.org) from Dash; [ideas](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153852369718855paWRH:decred.org) for better dev infrastructure, automated setup of an entire dev environment; Decred vs Dash [approval threshold](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$153852668618869mRjKZ:decred.org), minimum quorum, attempts to short circuit open source ethos; proposal [approval threshold](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153859491119463TKGiU:decred.org) and minimum quorum; [translations](https://matrix.to/#/!tfqymymiNgzSUJTHqS:decred.org/$153866711120129gFEWS:decred.org) of documentation; [history](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153864618819929CQaHw:decred.org) of ticket splitting in decredbrasil VSP; [idea](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153867874820458xeJec:decred.org) to reward Pi voting from the Treasury; [vote delegation](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153868485920740QqCCr:decred.org) and privacy of Pi voting; [marketing strategy](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153868959820853zYfqe:decred.org) and target audience for Decred, advertising not connecting us with type of users we want, stories from Decred converts; [summary](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153874797221213mSnzr:decred.org) of the debate around Vlad's Blockchain Governance 101, ethical dilemma whether to protect people from theft, using term 'autonomous'; [whether](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153878342822432RgZay:decred.org) Chinese miners could collude to control Decred, and whether miners in general deserve the animosity they commonly get; [terminology](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153874655321155rYFGA:decred.org): dev subsidy, network fund, treasury; loss of [diversity](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153892770323027pNBOh:decred.org) in the community as a result of chain fork; [quadratic voting](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153887144022897dgQOf:decred.org), passionate minority forcing rules on the majority; [gaming](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153927425525868IruoT:decred.org) Pi snapshot voting system; [idea](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153918965425238aUYAa:decred.org) to use BitConnect meme in Decred video; VSP [centralization](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153950034527053SFNXj:decred.org) concerns, 1-click VPS setup for solo voting; solo voting using [Raspberry Pi 3](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153953096327147HmyMx:decred.org), latency and disk speed; handling [translations](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153948439827046snYzK:decred.org); [liquid democracy](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153954602627296ibvkE:decred.org), importance of direct voting, possible countermeasures to VSPs playing games; [guidelines](https://matrix.to/#/!tfqymymiNgzSUJTHqS:decred.org/$153997649334019oJBgN:decred.org) for creating proposal; ASIC [flexibility](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$153956941127373jtLMI:decred.org) vs hashrate; optimal hardware for [voting wallets](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153967954229301OEZco:decred.org); [misbehaving admins](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153971553330341sUOMq:decred.org) are not such a big problem with transparent censorship; [mandatory email](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$153972735630609elzTp:decred.org) for Pi, Matrix integration; [mesh networks](https://matrix.to/#/!NKtIRqGOEGaZvSQkKl:decred.org/$153975642830743UMGBJ:decred.org), goTenna, LN; [separate address](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153986758232487JVCZi:decred.org) for Pi voting, delegation of sovereignty; why Bitcoin Core won't create a [spec](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153989568933092tBMyV:decred.org) for Bitcoin protocol; multi-day chat on [non-javascript](https://matrix.to/#/!LmKzrmxJIXNHNiEmIh:decred.org/$153996808633786coBDQ:decred.org) environments; stakeholders can't make good [decisions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153997031533828Zglen:decred.org), skin in the game; downsides of using ['autonomous'](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153994802233331ZeCqV:decred.org) in relation to Decred's model and possible replacement; [funding](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153999901734257JISpG:decred.org) of core development, contractor independence; [opinions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154015850835480YVWfd:decred.org) on rich list, concerns about wealth centralization; [ways](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154009032134975sckCK:decred.org) to rank comments on Pi; [defunding](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154013858535337uwJhD:decred.org) a proposal; fees to prevent [spam](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$154018142235520cuekK:decred.org) on Pi, Monero experience; [liaisons](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154024432236136yXour:decred.org) for proposals vouching for professional services; [paying in USD](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154024869536185GPjrF:decred.org) would set a bad precedent for the Treasury and lead to centralization; [more press](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1540324474112496lXVEe:matrix.org) from Binance listing than from Politeia release, short-term vision; bridging [challenges](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154032931237477PyMSA:decred.org), Matrix as a hub; [voter fatigue](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154040105938567GwEyd:decred.org); [people committed](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154040815238805YjNtU:decred.org) for the proposal, watching for staff changes; [ethics](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154041774339075mDBxq:decred.org) of attacking smaller PoW coins, Decred was nearly impossible to 51% attack from the start; [how](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154043923339333cZxhY:decred.org) to protect from sending to wrong address, how the recipient can acknowledge the transfer; [why](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$1540504703107RhgLT:decred.org) wasn't a PR company hired in the past; sidechains vs LN as a [way to scale](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1540581140920mIeCx:decred.org), more opportunities when base layer can change; [organic growth](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15406049691451KndKt:decred.org) of Bitcoin and VC money; using Git to massively replicate [impactful writings](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15409403034615pjxpB:decred.org); whether DCR locked in tickets is a [security advantage](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15409448374658jRaoW:decred.org) in case of theft; Politeia launch [issues](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15409810504896mTeTG:decred.org), becoming an admin, what if admins delay the vote to buy tickets + solutions, not adding rules prematurely.
+Chats: [choosing](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153842845217959NFCXu:decred.org) a VSP; creating and signing transactions [offline](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153842975517974wduOy:decred.org); [differences](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153844796918108yZpuM:decred.org) from Dash; [ideas](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153852369718855paWRH:decred.org) for better dev infrastructure, automated setup of an entire dev environment; Decred vs Dash [approval threshold](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$153852668618869mRjKZ:decred.org), minimum quorum, attempts to short circuit open source ethos; proposal [approval threshold](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153859491119463TKGiU:decred.org) and minimum quorum; [translations](https://matrix.to/#/!tfqymymiNgzSUJTHqS:decred.org/$153866711120129gFEWS:decred.org) of documentation; [history](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153864618819929CQaHw:decred.org) of ticket splitting in decredbrasil VSP; [idea](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153867874820458xeJec:decred.org) to reward Pi voting from the Treasury; [vote delegation](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153868485920740QqCCr:decred.org) and privacy of Pi voting; [marketing strategy](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153868959820853zYfqe:decred.org) and target audience for Decred, advertising not connecting us with type of users we want, stories from Decred converts; [summary](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153874797221213mSnzr:decred.org) of the debate around Vlad's Blockchain Governance 101, ethical dilemma whether to protect people from theft, using term 'autonomous'; [whether](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153878342822432RgZay:decred.org) Chinese miners could collude to control Decred, and whether miners in general deserve the animosity they commonly get; [terminology](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153874655321155rYFGA:decred.org): dev subsidy, network fund, treasury; loss of [diversity](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153892770323027pNBOh:decred.org) in the community as a result of chain fork; [quadratic voting](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153887144022897dgQOf:decred.org), passionate minority forcing rules on the majority; [gaming](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153927425525868IruoT:decred.org) Pi snapshot voting system; [idea](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153918965425238aUYAa:decred.org) to use BitConnect meme in Decred video; VSP [centralization](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153950034527053SFNXj:decred.org) concerns, 1-click VPS setup for solo voting; solo voting using [Raspberry Pi 3](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153953096327147HmyMx:decred.org), latency and disk speed; handling [translations](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153948439827046snYzK:decred.org); [liquid democracy](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153954602627296ibvkE:decred.org), importance of direct voting, possible countermeasures to VSPs playing games; [guidelines](https://matrix.to/#/!tfqymymiNgzSUJTHqS:decred.org/$153997649334019oJBgN:decred.org) for creating proposal; ASIC [flexibility](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$153956941127373jtLMI:decred.org) vs hashrate; optimal hardware for [voting wallets](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153967954229301OEZco:decred.org); [misbehaving admins](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153971553330341sUOMq:decred.org) are not such a big problem with transparent censorship; [mandatory email](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$153972735630609elzTp:decred.org) for Pi, Matrix integration; [mesh networks](https://matrix.to/#/!NKtIRqGOEGaZvSQkKl:decred.org/$153975642830743UMGBJ:decred.org), goTenna, LN; [separate address](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153986758232487JVCZi:decred.org) for Pi voting, delegation of sovereignty; why Bitcoin Core won't create a [spec](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153989568933092tBMyV:decred.org) for Bitcoin protocol; multi-day chat on [non-javascript](https://matrix.to/#/!LmKzrmxJIXNHNiEmIh:decred.org/$153996808633786coBDQ:decred.org) environments; stakeholders can't make good [decisions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153997031533828Zglen:decred.org), skin in the game; downsides of using ['autonomous'](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153994802233331ZeCqV:decred.org) in relation to Decred's model and possible replacement; [funding](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153999901734257JISpG:decred.org) of core development, contractor independence; [opinions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154015850835480YVWfd:decred.org) on rich list, concerns about wealth centralization; [ways](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154009032134975sckCK:decred.org) to rank comments on Pi; [defunding](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154013858535337uwJhD:decred.org) a proposal; fees to prevent [spam](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$154018142235520cuekK:decred.org) on Pi, Monero experience; [liaisons](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154024432236136yXour:decred.org) for proposals vouching for professional services; [paying in USD](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154024869536185GPjrF:decred.org) would set a bad precedent for the Treasury and lead to centralization; [more press](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1540324474112496lXVEe:matrix.org) from Binance listing than from Politeia release, short-term vision; bridging [challenges](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154032931237477PyMSA:decred.org), Matrix as a hub; [voter fatigue](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154040105938567GwEyd:decred.org); [people committed](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154040815238805YjNtU:decred.org) for the proposal, watching for staff changes; [how](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154043923339333cZxhY:decred.org) to protect from sending to wrong address, how the recipient can acknowledge the transfer; [why](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$1540504703107RhgLT:decred.org) wasn't a PR company hired in the past; sidechains vs LN as a [way to scale](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1540581140920mIeCx:decred.org), more opportunities when base layer can change; [organic growth](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15406049691451KndKt:decred.org) of Bitcoin and VC money; using Git to massively replicate [impactful writings](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15409403034615pjxpB:decred.org); whether DCR locked in tickets is a [security advantage](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15409448374658jRaoW:decred.org) in case of theft; Politeia launch [issues](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15409810504896mTeTG:decred.org), becoming an admin, what if admins delay the vote to buy tickets + solutions, not adding rules prematurely.
 
 > I've visited a lot of other communities and IMO the Decred community seems quite strong. I haven't found many where you have such access to the developers and where you can watch the changes being made on a daily basis. (@sumiflow in [#trading](https://matrix.to/#/!zxBsqZRxjbQoLqJRwe:decred.org/$153979318831397xufQV:decred.org))
 
@@ -317,7 +318,7 @@ Bitcoin celebrated 10 years since Satoshi [posted](http://www.metzdowd.com/piper
 
 Sia forked to brick all ASIC units except Obelisk. More details in the [FAQ](https://blog.sia.tech/sia-fork-faqs-c6b3e0e73ce0), a [blog post](https://blog.sia.tech/sia-proof-of-work-reset-24b5ec439625) by David Vorick, and an extensive [Reddit AMA](https://www.reddit.com/r/siacoin/comments/9kjrfi/the_sia_team_is_here_to_answer_your_questions_ask/) with the developers. Part of the community who disagreed with the fork established SiaClassic and [declared independence](https://medium.com/siaclassic/siaclassic-declaration-of-independence-315284c56147). Reddit AMA is [here](https://www.reddit.com/r/SiaClassic/comments/9s37d7/siaclassic_foundation_live_ama_session/). InnoSilicon [replied](https://twitter.com/Inno_Miner/status/1052063949162668032) and supported SiaClassic Foundation. But that's not all: another fork to emerge from the algorithm change is Sia Prime. Together with Hyperspace, there are 4 projects now. Thankfully, someone [explained](https://www.reddit.com/r/siacoin/comments/9p3w4g/sia_hyperspace_sia_classic_and_sia_prime_a_whos/) the differences. Let's learn from this, try to avoid conflicts of interest and keep the community together.
 
-A Reddit user offered to livestream an [attack](https://www.reddit.com/r/CryptoCurrency/comments/9m1uuj/if_i_livestreamed_the_setup_and_execution_of/) on a small PoW coin for education (and perhaps entertainment) purposes.
+A Reddit user offered to livestream an [51% attack](https://www.reddit.com/r/CryptoCurrency/comments/9m1uuj/if_i_livestreamed_the_setup_and_execution_of/) on a small PoW coin for educational purposes. Ethics of this were discussed [here](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$153892562723012GdzyZ:decred.org) and [here](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154041774339075mDBxq:decred.org). It is worth noting that Decred was nearly impossible to 51% attack from the start.
 
 Speculation circulates around [vote buying](https://www.coindesk.com/vitalik-called-it-vote-buying-scandal-stokes-fears-of-eos-failure/) in EOS.
 
