Fix reddit link

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -336,7 +336,7 @@ When shipping some MacBooks, Apple [forgot to disable](https://www.zdnet.com/art
 
 Which parts of the Journal do you find most and least useful? Which deserve more or less effort? Is it getting too large?
 
-Please let us know in the [comments]({}) as we are looking to optimize efforts.
+Please let us know in the [comments](https://www.reddit.com/r/decred/comments/9vphig/decred_journal_october_2018/) as we are looking to optimize efforts.
 
 ## About This Issue
 
@@ -344,6 +344,6 @@ This is the 7th issue of Decred Journal. It is available on [GitHub](https://xau
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-Your feedback and contributions are welcome on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
+Your feedback and contributions are welcome on [Reddit](https://www.reddit.com/r/decred/comments/9vphig/decred_journal_october_2018/), [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
 Credits (alphabetical order): bee, davecgh, degeri, Dustorf, Haon, jholdstock, oregonisaac, raedah, richardred and zubairzia0. Special thanks to DZ for translations.
