--- a/journal/201811.md
+++ b/journal/201811.md
@@ -14,8 +14,7 @@
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
-* Fixed address watching issues on heavily
-used wallets https://github.com/decred/dcrwallet/pull/1320
+* Fixed address watching issues on heavily used wallets https://github.com/decred/dcrwallet/pull/1320
 * Fixed missed and double spent transactions in some cases https://github.com/decred/dcrwallet/pull/1321
 
 [Decrediton](https://github.com/decred/decrediton):
@@ -30,15 +29,32 @@ used wallets https://github.com/decred/dcrwallet/pull/1320
 
 A lot of the big enhancements over the next couple of months are focused on improving performance.
 
-[Android](https://github.com/decred/dcrandroid): {}
+[Android](https://github.com/decred/dcrandroid):
 
-[iOS](https://github.com/raedahgroup/dcrios): {}
+* Added QR Code sharing option for compatibility with other apps.
+* Graphics and logos updated to match latest Decred design elements.
+* New feature to transfer funds between accounts in the same wallet via dropdown selection.
+* Hidden account feature with balance deducted from main screen added.
+
+[iOS](https://github.com/raedahgroup/dcrios):
+
+* QR Code scanning enabled for transactions.
+* Top to bottom redesign to match latest design elements.
+* Full transaction details added to match detail level of desktop wallet.
 
 Trezor: Model T firmware version 2.0.9 was [released](https://blog.trezor.io/firmware-updates-2-0-9-and-1-7-1-developed-by-the-community-for-the-community-c4b965741ca3) with Decred support. Cheers @matheusd for making it happen! Now our Decrediton developers can work on the integration.
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+[dcrdata](https://github.com/decred/dcrdata):
 
-[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
+* Check if "Graphical Block Display" is complete by month end, tests just launched.
+* Check work on OPRETURN and "Side Chain" forward compatibility.
+
+[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher):
+
+* New ticket splitting guide released (EN): https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/
+* New ticket splitting video released (PT w/ EN subs): https://www.youtube.com/watch?v=3RGoUQK0g24&feature=share
+* Ticket splitting volume increased {needs volume numbers pulled for verfication}
+* Update to allow ticket splitting with SPV wallet (changing uxtos lookup from dcrd to dcrdata): https://github.com/matheusd/dcr-split-ticket-matcher/issues/29
 
 [docs](https://github.com/decred/dcrdocs):
 
